Prevent background from stretching

--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,17 @@ body {
 }
 
 #root {
+  position: relative;
   padding: 2rem;
-  background: #13547a;
-  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
   min-height: 100%;
+}
+
+#background {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  background-image: linear-gradient(15deg, #13547a 0%, #80d0c7 100%);
 }
 
 code {
